# dependabot-playground

./: pyproject.toml
.github/: workflow.yaml
.github/workflows/: workflow.yaml
