[tool.poetry]
name = "poetry new"
version = "0.1.0"
description = ""
authors = ["miya10kei <miya10kei@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
cryptography = "42.0.2"
pillow = "10.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
